# libvlc-glut

./: .gitignore  CMakeLists.txt  README.md  make.bat
src/: libvlc-glut.cpp
vlc/: README.md
